update foler structures

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-datasets
-VR_task4_mj/category_data
-vr_task3/datasets
+task1/datasets
+task4/category_data
+task3/datasets
 .ipynb_checkpoints
 .idea
